configs/external/requestrr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: requestrr
  namespace: requestrr
  labels:
    app: requestrr
spec:
  type: ClusterIP
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    app: requestrr
