configs/external/requestrr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: requestrr
  namespace: requestrr
  annotations:
    cert-manager.io/cluster-issuer: mkcert
spec:
  ingressClassName: traefik
  rules:
  - host: requestrr.homelab.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: requestrr
            port:
              number: 4545
  tls:
  - hosts:
    - requestrr.homelab.local
    secretName: requestrr-tls
